# ignition-darwin-op

./: docker-compose.remote.yml  docker-compose.yml
environment_files/: ignition_common.env  xwindow_common.env
launch/: darwin_op_factory.ign  soccer_ball_factory.ign
models/darwin_op/: README.md  darwin_op.sdf  model.config
models/darwin_op/meshes/collision/: geo_op_collide_body.stl  geo_op_collide_head.stl  geo_op_collide_left_ankle.stl  geo_op_collide_left_foot.stl  geo_op_collide_left_hip-roll.stl  geo_op_collide_left_hip-yaw.stl  geo_op_collide_left_lower-arm.stl  geo_op_collide_left_shin.stl  geo_op_collide_left_shoulder.stl  geo_op_collide_left_thigh.stl  geo_op_collide_left_upper-arm.stl  geo_op_collide_neck.stl  geo_op_collide_right_ankle.stl  geo_op_collide_right_foot.stl  geo_op_collide_right_hip-roll.stl  geo_op_collide_right_hip-yaw.stl  geo_op_collide_right_lower-arm.stl  geo_op_collide_right_shin.stl  geo_op_collide_right_shoulder.stl  geo_op_collide_right_thigh.stl  geo_op_collide_right_upper-arm.stl
models/darwin_op_with_joint_controller/: model.config  model.sdf
models/ground_plane/: ground_plane.sdf  model.config
models/soccer_ball_size_1/: README.md  model.config  soccer_ball_size_1.sdf
models/soccer_ball_size_1/meshes/: soccer_ball.dae
models/soccer_field/: README.md  model.config  soccer_field.sdf
src/: .gitignore  CMakeLists.txt
src/joint_command_publisher/: CMakeLists.txt
src/joint_command_publisher/include/joint_command_publisher/: joint_command_publisher.h  publish_pipeline.h
src/joint_command_publisher/include/joint_command_publisher/data_resource/: data_resource.h  joint_command_position.h
src/joint_command_publisher/include/joint_command_publisher/ignition_publish_gateway/: ignition_publish_gateway.h  joint_command_position_gateway.h
src/joint_command_publisher/include/joint_command_publisher/publish_pipeline/: joint_cmd_pos_pipeline.h  pipeline_map.h  publish_pipeline.h
src/joint_command_publisher/src/: joint_command_publisher.cpp  joint_command_publisher_node.cpp
src/joint_command_publisher/src/demo/: cmd_pos_node.cpp  joint_command_publisher_node.cpp
worlds/: darwin_op.sdf  soccer_playground.sdf  soccer_playground_with_robot.sdf
(+22 files in other folders)
